Sun Jun  8 20:52:00 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (getrcsrev): Before printing error, check whether it was
	feof or ferror.

	* rcs.h, import.c (add_rcs_file): No longer static.  New arguments
	add_vbranch, add_vhead, and add_logfp replace access to static
	variables vbranch, vhead, and logfp.
	* mkmodules.c: Call it instead of RCS_CI.
	* import.c (process_import_file): Adjust call to add_rcs_file.

Tue Jun  3 10:18:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basicb): Match "." with "\." not ".".

Tue Jun  3 13:02:37 1997  Norbert Kiesel  <nk@cosa.de>

	* checkout.c (checkout): Removed restriction of not sending -k in
 	remote export (I think this was introduced while the -k handling
 	was still broken in remote mode).  Give better error texts
 	regarding -c and -s options.  Use error() instead of usage() for
 	reporting errors in all places.  Reindented some lines.  Free
 	xmalloc'd space of options.

Thu May 29 16:32:47 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcscmds.c (RCS_checkin), mkmodules.c (init): Pass -w option to
	"ci", specifying getcaller ().
	* server.h, server.c (CVS_Username): Now extern.
	* subr.c (getcaller): Return CVS_Username if it is set.

Wed May 28 22:31:38 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (update_fileproc): If wrap_merge_is_copy and we would
	like to do a merge, give a fatal error.  See comment for why.
	* sanity.sh (mwrap): New tests, tests for above fix.

Tue May 27 21:59:32 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (stamps): cd to ${TESTDIR} before starting.

Mon May 26 15:31:30 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (handle_mod_time): New function.
	(responses): Add "Mod-time".
	(stored_modtime_valid, stored_modtime): New variables.
	(update_entries): If it is set, change the file's modtime.
	* server.c, server.h (server_modtime): New function.
	* vers_ts.c (Version_TS): Call it.